Removed use of List.of to fix CI error